# SBExercise2742

./: CMakeLists.txt
include/: BaseShape.h  Circle.h  EqualTriangle.h  Rectangle.h  ShapeColor.h  Shapes.h  Square.h
src/: BaseShape.cpp  Circle.cpp  EqualTriangle.cpp  Rectangle.cpp  ShapeColor.cpp  Square.cpp  main.cpp
